name:                coingecko-api-wrapper
version:             0.1.0.0
homepage:            https://github.com/Basti53/coingecko-api-wrapper#readme
license:             BSD3
license-file:        LICENSE
author:              Sebastian Karlsson
maintainer:          sebastiankarlsson29@gmail.com
copyright:           2022 Sebastian Karlsson
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Coingecko
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , http-conduit
                     , time
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Basti53/coingecko-api-wrapper
